--- a/vite-project/src/components/SobreNos/SobreNos.css
+++ b/vite-project/src/components/SobreNos/SobreNos.css
@@ -22,7 +22,7 @@ p{
     width: auto;
     text-align: justify;
     text-justify: inter-word;
-    margin-right: 8%;
+    margin-left: 4% ;margin-right: 8%;
 }
 h3{
     margin-left: 4%;
