--- a/vite-project/src/components/Header/Header.css
+++ b/vite-project/src/components/Header/Header.css
@@ -6,10 +6,10 @@
     background-color: #A4DBFF;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
     /* border-radius: 0px 0px 30px 30px; */
-    padding: 0.2%; 
+    padding: 0.54%; 
 }
 .child-div-img-logo{
     margin-left: 1.8%;
@@ -18,16 +18,17 @@
 
 }
 .child-div-info-text {
-    width: 23rem; height: auto;
+    width: 65%; height: auto;
     display: flex; flex-direction: row;
-    justify-content: center; align-items: center;
-    margin-right: 1.3%;
+    justify-content: space-evenly; 
+    margin-top: 1rem; margin-bottom: 1rem;
+    font-family: 'Fredoka', sans-serif;;
 }
 .info-text-content {
     color: #273084;
     text-decoration: none; 
     font-style: bold;
-    font-size: 1.3rem; 
+    font-size: 1.4rem; 
     margin-left: 7%; 
 }
 .info-text-content:hover{
